# bufcli

./: .gitignore  Cargo.toml  makefile
examples/: hourly_cli.rs
src/: builder.rs  climo_db.rs  distributions.rs  error.rs  lib.rs  main.rs  stats_record.rs
src/climo_db/: add_data.sql  add_location.sql  build_cdf.rs  climo_element.rs  create_climate_data_db.sql  populate.rs  query.rs  stats_record.rs
src/sql/: add_data.sql  add_location.sql  all_data_for_site_and_model.sql  create.sql  create_climate_data_db.sql  create_climate_stats_db.sql  get_deciles.sql  hourly_deciles.sql  init_times.sql  insert_cdf.sql
