[package]
name = "bufcli"
version = "0.12.0"
authors = ["Ryan <rnleach@users.noreply.github.com>"]
edition = "2018"
publish = false

[dependencies]
bufkit-data = "^0.21.0"
chrono = "^0.4.2"
clap = { version = "^2.32.0", features = ["wrap_help"]}
crossbeam-channel = "^0.5.0"
dirs = "^4.0"
itertools = "^0.10"
metfor = "^0.9.0"
pbr = "^1.0.1"
rusqlite = { version = "^0.25", features = ["bundled", "chrono", "blob"], default-features = false }
serde = { version = "^1.0.102", features = ["derive"] }
sounding-analysis = "^0.17.2"
sounding-bufkit = "^0.16"
strum = "0.21"
threadpool = "1.7.1"
